# LearningLLMCode

./: main.py  pyproject.toml
1_foundation/: 1_Foundational.ipynb  2_CompareLLM.ipynb  3_PDFKnwoledgeBase.ipynb
1_foundation/knowledgebase/: summary.txt
2_openaisdk/: 1_Asyncio.ipynb  2_AgentToolNFlow.ipynb  3_GuardRails.ipynb  4_OpenAIHostedTools.ipynb
3_crewai/coder/: pyproject.toml
3_crewai/coder/output/: code_and_output.txt
3_crewai/coder/src/coder/: crew.py  main.py
3_crewai/coder/src/coder/config/: agents.yaml  tasks.yaml
3_crewai/debate/: pyproject.toml
3_crewai/debate/output/: decide.md  oppose.md  propose.md
3_crewai/debate/src/debate/: crew.py  main.py
3_crewai/debate/src/debate/config/: agents.yaml  tasks.yaml
3_crewai/financial_researcher/: pyproject.toml
3_crewai/financial_researcher/output/: report.md
3_crewai/financial_researcher/src/financial_researcher/: crew.py  main.py
3_crewai/financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
3_crewai/stock_picker/: pyproject.toml
3_crewai/stock_picker/memory/: long_term_memory_storage.db
3_crewai/stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crewai/stock_picker/src/stock_picker/: crew.py
3_crewai/stock_picker/src/stock_picker/config/: agents.yaml
4_LangGraph/: 1_lab.ipynb  2_observerablity.ipynb  3_asynclanggraph.ipynb  4_multiagent.ipynb  sidekick_tools.py
4_LangGraph/sandbox/: dinner.md
foundation/: 3_PDFKnwoledgeBase.ipynb  4_PushOverNotification.ipynb  app.py
