[project]
name = "learningllmcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.71.0",
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "ipywidgets>=8.1.7",
    "openai>=2.5.0",
    "openai-agents>=0.4.2",
    "pydantic>=2.11.10",
    "pypdf>=6.1.3",
]
