[project]
name = "learningllmcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.71.0",
    "beautifulsoup4>=4.14.2",
    "crewai>=1.4.1",
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "ipywidgets>=8.1.7",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langsmith>=0.4.43",
    "lxml>=6.0.2",
    "nest-asyncio>=1.6.0",
    "openai>=2.5.0",
    "openai-agents>=0.4.2",
    "playwright>=1.56.0",
    "pydantic>=2.11.10",
    "pypdf>=6.1.3",
    "sendgrid>=6.12.5",
    "wikipedia>=1.4.0",
]
